--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ repositories {
 //dependencies의 경우 프로젝트 개발에 필요한 의존성을 선언한다
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.projectlombok:lombok')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('com.h2database:h2')
     testCompile('org.springframework.boot:spring-boot-starter-test')
-    //testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
